[build-system]
requires = ["hatchling >=1.5", "virtualenv<22.0"]
build-backend = "hatchling.build"

[project]
name = "metakernel"
authors = [{name = "Metakernel Developers", email = "steven.silvester@ieee.org"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Framework :: IPython",
    "Topic :: System :: Shells",
]
urls = {Homepage = "https://github.com/Calysto/metakernel"}
requires-python = ">=3.9"
dependencies = [
    "comm >=0.1.0",
    "ipykernel >=5.5.6",
    "jupyter_core >=4.9.2",
    "pexpect >=4.8",
    "jedi >=0.18",
]
dynamic = ["description", "version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
activity = ["portalocker"] # activity magic
parallel = ["ipyparallel"] # parallel magic

[dependency-groups]
dev = [ { include-group = "test" } ]
test = [
    "jupyter_kernel_test",
    "ipywidgets",
    "metakernel_python",
    "pytest",
    "pytest-timeout",
    "requests",
]
docs = [
    "jupyter-sphinx",
    "myst-parser",
    "nbsphinx",
    "numpydoc",
    "pydot",
    "pypandoc",
    "recommonmark",
    "sphinx",
    "sphinx-bootstrap-theme",
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon",
]
coverage = [
    { include-group = "test" },
    "coverage[toml]",
    "pytest-cov",
]
typing = ["pip", "mypy", "ipywidgets"]

[tool.uv.sources]
metakernel_python = { path = "./metakernel_python", editable = true }

[tool.hatch.version]
path = "metakernel/__init__.py"

[tool.hatch.build]
exclude = [
  "docs/",
  "examples",
]
artifacts = ["metakernel/py.typed"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts= "-raXs  --durations 10 --color=yes --doctest-modules"
testpaths = ["tests", "tests/magics"]
strict = true
log_level = "INFO"
timeout = 300
# Restore this setting to debug failures
# timeout_method = "thread"
filterwarnings= [
  # Fail on warnings
  "error",
  "ignore:unclosed event loop:ResourceWarning",
  "ignore:There is no current event loop:DeprecationWarning",
  # When we run ipcluster and then run the tests we get this warning
  "ignore:Widget.* is deprecated:DeprecationWarning",
  "module:datetime.datetime.utc:DeprecationWarning:dateutil",
  "module:datetime.datetime.utc:DeprecationWarning:ipyparallel",
  "module:Parsing dates involving a day of month without a year:DeprecationWarning",
  "module:'setParseAction' deprecated - use 'set_parse_action':DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
exclude = [
    "hatch_build.*\\.py",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["comparison-overlap", "no-untyped-def", "import-not-found", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "metakernel.magics.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "import-not-found"]

[tool.ruff]
exclude = ["examples/echo_kernel.ipynb"]

[tool.ruff.lint]
extend-select = [
  "B",      # flake8-bugbear
  "I",      # isort
  "RUF",    # Ruff-specific
  "UP",     # pyupgrade
]
ignore = ["RUF012", "UP031", "RUF005", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["UP031", "E402", "RUF012", "F841"]
"metakernel/pexpect.py" = ["F401"]