[build-system]
requires = ["hatchling >=1.5"]
build-backend = "hatchling.build"

[project]
name = "metakernel"
authors = [{name = "Metakernel Developers", email = "steven.silvester@ieee.org"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: IPython",
    "Topic :: System :: Shells",
]
urls = {Homepage = "https://github.com/Calysto/metakernel"}
requires-python = ">=3.10"
dependencies = [
    "comm >=0.1.3",
    "ipykernel >=6.21.3",
    "jupyter_core >=5.3.0",
    "pexpect >=4.9.0",
    "jedi >=0.19.0",
]
dynamic = ["description", "version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
activity = ["portalocker"] # activity magic
parallel = ["ipyparallel"] # parallel magic

[dependency-groups]
dev = [ { include-group = "test" } ]
test = [
    "jupyter_kernel_test",
    "ipywidgets",
    "metakernel_python",
    "pytest",
    "pytest-timeout",
    "requests",
]
test-all = [
    { include-group = "test" },
    "calysto",           # brain magic, activity magic (BarChart)
    "calysto-scheme",    # scheme magic
    "ipyparallel",       # parallel magic
    "matplotlib",        # matplotlib magic
    "portalocker",       # activity magic
    "pydot",             # dot magic
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocs-jupyter>=0.24",
    "mkdocstrings[python]>=0.24",
]
coverage = [
    { include-group = "test-all" },
    "coverage[toml]",
    "pytest-cov",
]
typing = [{ include-group = "test-all" }, "pip", "mypy", "ipywidgets"]

[tool.uv.sources]
metakernel_python = { path = "./metakernel_python", editable = true }

[tool.hatch.version]
path = "metakernel/__init__.py"

[tool.hatch.build]
exclude = [
  "docs/",
  "examples",
]
artifacts = ["metakernel/py.typed"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts= "-raXs  --durations 10 --color=yes --doctest-modules"
testpaths = ["tests"]
strict = true
log_level = "INFO"
timeout = 300
# Restore this setting to debug failures
# timeout_method = "thread"
filterwarnings= [
  # Fail on warnings
  "error",
  "ignore:unclosed event loop:ResourceWarning",
  "ignore:There is no current event loop:DeprecationWarning",
  # When we run ipcluster and then run the tests we get this warning
  "ignore:Widget.* is deprecated:DeprecationWarning",
  "module:datetime.datetime.utc:DeprecationWarning:dateutil",
  "module:datetime.datetime.utc:DeprecationWarning:ipyparallel",
  "module:Parsing dates involving a day of month without a year:DeprecationWarning",
  "module:'setParseAction' deprecated - use 'set_parse_action':DeprecationWarning",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "def __repr__",
]

[tool.mypy]
python_version = "3.10"
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
exclude = [
    "hatch_build.*\\.py",
    "metakernel_echo/.*",
    "site/.*",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["no-untyped-def"]

[tool.ruff]
exclude = ["examples/echo_kernel.ipynb"]

[tool.ruff.lint]
extend-select = [
  "B",      # flake8-bugbear
  "I",      # isort
  "RUF",    # Ruff-specific
  "S",      # flake8-bandit (security)
  "UP",     # pyupgrade
]
ignore = [
  "RUF005",
  "RUF012",
  "S102",   # exec() is fundamental to a Python kernel/REPL
  "S307",   # eval() is fundamental to a kernel/REPL system
  "S310",   # URL open with user-provided URLs is intentional
  "S603",   # subprocess with trusted internal input
  "S604",   # shell= as a dict key is not a security issue (false positive)
  "S607",   # partial executable path is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["UP031", "E402", "RUF012", "F841", "S101", "S108"]
"metakernel/pexpect.py" = ["F401"]
