[build-system]
requires = ["hatchling >=1.14.0"]
build-backend = "hatchling.build"

[project]
name = "metakernel"
authors = [{name = "Metakernel Developers", email = "steven.silvester@ieee.org"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: IPython",
    "Topic :: System :: Shells",
]
urls = {Homepage = "https://github.com/Calysto/metakernel"}
requires-python = ">=3.10"
dependencies = [
    "comm >=0.1.3",
    "ipykernel >=6.22.0",
    "jupyter_core >=5.3.1",
    "pexpect >=4.9.0",
    "jedi >=0.19.0",
]
dynamic = ["description"]
version = "1.0.2.dev1"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
activity = ["portalocker >=2.8.0"] # activity magic
parallel = ["ipyparallel >=8.5.1"] # parallel magic

[dependency-groups]
dev = [ { include-group = "test" } ]
test = [
    "jupyter_kernel_test >=0.6.0",
    "ipywidgets >=8.0.5",
    "metakernel_python",
    "pytest >=9.0",
    "pytest-timeout >=2.2.0",
    "requests >=2.29.0",
]
test-all = [
    { include-group = "test" },
    "calysto >=1.0.6",        # brain magic, activity magic (BarChart)
    "calysto-scheme >=1.4.8", # scheme magic
    "ipyparallel >=8.5.1",    # parallel magic
    "matplotlib >=3.7.2",     # matplotlib magic
    "portalocker >=2.8.0",    # activity magic
    "pydot >=2.0.0",          # dot magic
]
docs = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.4",
    "mkdocs-jupyter>=0.24.1",
    "mkdocstrings[python]>=0.21.0",
]
coverage = [
    { include-group = "test-all" },
    "coverage[toml] >=7.2.3",
    "pytest-cov >=4.1.0",
]
typing = [{ include-group = "test-all" }, "pip >=23.1", "mypy >=1.2.0", "ipywidgets >=8.0.5"]

[tool.uv.sources]
metakernel_python = { path = "./metakernel_python", editable = true }

[tool.hatch.build]
exclude = [
  "docs/",
  "examples",
]
artifacts = ["metakernel/py.typed"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts= "-raXs  --durations 10 --color=yes --doctest-modules"
testpaths = ["tests"]
strict = true
log_level = "INFO"
timeout = 300
# Restore this setting to debug failures
# timeout_method = "thread"
filterwarnings= [
  # Fail on warnings
  "error",
  "ignore:unclosed event loop:ResourceWarning",
  "ignore:There is no current event loop:DeprecationWarning",
  # When we run ipcluster and then run the tests we get this warning
  "ignore:Widget.* is deprecated:DeprecationWarning",
  "module:datetime.datetime.utc:DeprecationWarning:dateutil",
  "module:datetime.datetime.utc:DeprecationWarning:ipyparallel",
  "module:Parsing dates involving a day of month without a year:DeprecationWarning",
  "module:'setParseAction' deprecated - use 'set_parse_action':DeprecationWarning",
  # This is resolved in newer versions of Jupyter Core that removed the warning.
  "module:Jupyter is migrating its paths:DeprecationWarning",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "def __repr__",
]

[tool.mypy]
python_version = "3.10"
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
exclude = [
    "hatch_build.*\\.py",
    "metakernel_echo/.*",
    "site/.*",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["no-untyped-def"]

[tool.ruff]
exclude = ["examples/echo_kernel.ipynb"]

[tool.ruff.lint]
extend-select = [
  "B",      # flake8-bugbear
  "I",      # isort
  "RUF",    # Ruff-specific
  "S",      # flake8-bandit (security)
  "UP",     # pyupgrade
]
ignore = [
  "RUF005",
  "RUF012",
  "S102",   # exec() is fundamental to a Python kernel/REPL
  "S307",   # eval() is fundamental to a kernel/REPL system
  "S310",   # URL open with user-provided URLs is intentional
  "S603",   # subprocess with trusted internal input
  "S604",   # shell= as a dict key is not a security issue (false positive)
  "S607",   # partial executable path is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["UP031", "E402", "RUF012", "F841", "S101", "S108"]
"metakernel/pexpect.py" = ["F401"]
