[metadata]
name = metakernel
version = attr: metakernel.__init__.__version__
author = Metakernel Developers
author_email = steven.silvester@ieee.org
license_file = LICENSE.txt
home_page = https://github.com/Calysto/metakernel
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: IPython
    Topic :: System :: Shells

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    ipykernel
    jupyter_core
    pexpect >=4.2
    jedi >=0.11.0
[options.extras_require]
test =
    pytest
    pytest-cov
    requests
    jupyter_kernel_test
    pytest-timeout
activity = portalocker  # activity magic
parallel = ipyparallel  # parallel magic

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[wheel]
universal = 1
