[build-system]
requires = ["hatchling >=1.10.0", "jupyter_client"]
build-backend = "hatchling.build"

[project]
name = "metakernel_echo"
authors = [{name = "Douglas Blank", email = "doug.blank@gmail.com"}]
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]
dependencies = ["metakernel"]
dynamic = ["description", "version"]

[project.readme]
text = "A simple echo kernel for Jupyter/IPython, based on MetaKernel"
content-type = "text/plain"

[project.urls]
Homepage = "https://github.com/calysto/metakernel/tree/main/metakernel_echo"

[tool.hatch.version]
path = "metakernel_echo/__init__.py"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"
