[build-system]
requires = ["hatchling >= 1.5"]
build-backend = "hatchling.build"

[project]
name = "metakernel_python"
authors = [{name = "Douglas Blank", email = "doug.blank@gmail.com"}]
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 2",
    "Topic :: System :: Shells",
]
dependencies = ["metakernel", "jedi"]
dynamic = ["description", "version"]

[project.readme]
text = "A Python kernel for Jupyter/IPython, based on MetaKernel"
content-type = "text/plain"

[project.urls]
Homepage = "https://github.com/calysto/metakernel/tree/main/metakernel_python"

[tool.hatch.version]
path = "metakernel_python.py"
